@@ -1,3 +1,9 @@
+Tue Apr 29 22:14:12 2003  Alex Waugh  <alex@alexwaugh.com>
+
+	* unixlib/features.h: Don't pollute the userland namespace
+	  with internal_function or weak_function.
+	* sys/cdefs.h: Likewise.
+
 Tue Apr 29 20:37:46 2003  Alex Waugh  <alex@alexwaugh.com>
 
 	* sys/_syslib.s: Require FPEmulator 4.00 or higher
